
[package]
name = "firmion"
description = "Ergonomic firmware and binary file creation tool."
build = "build.rs"
license-file = "LICENSE.txt"
readme = "README.md"
homepage = "https://github.com/steveking-gh/firmion"
repository = "https://github.com/steveking-gh/firmion"
keywords = ["firmware", "cli", "build", "flash"]
categories = ["development-tools::compilers"]
authors = ["Steve King <sk@metrokings.com>"]
edition = "2024"
exclude = [
    "tests/*",
    "docs/ai/*",
    ".github/*",
    "ast/fuzz/*",
    "extension_registry/test_mock.rs",
    "images/*",
    "layoutdb/fuzz/*",
]

[workspace]
members = [
    "ast",
    "astdb",
    "const_eval",
    "depth_guard",
    "diags",
    "exec_phase",
    "extension_registry",
    "extensions",
    "firmion_extension",
    "ir",
    "irdb",
    "ireval",
    "layout_phase",
    "layoutdb",
    "linearizer",
    "locationdb",
    "map_phase",
    "mapdb",
    "objfile",
    "output_buffer",
    "process",
    "regiondb",
    "std/crc32c",
    "std/esp_checksum",
    "std/md5",
    "std/sha256",
    "std/xor",
    "symtable",
    "validation_phase",
]
[workspace.package]
version = "0.7.0"
authors = ["Steve King <sk@metrokings.com>"]
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"

# Strip the firmion- prefix from package names.
# The prefix only exists to prevent name collisions on crates.io.
[workspace.dependencies]
ast = { package = "firmion-ast", path = "ast" }
astdb = { package = "firmion-astdb", path = "astdb" }
const_eval = { package = "firmion-const-eval", path = "const_eval" }
depth_guard = { package = "firmion-depth-guard", path = "depth_guard" }
diags = { package = "firmion-diags", path = "diags" }
exec_phase = { package = "firmion-exec-phase", path = "exec_phase" }
extension_registry = { package = "firmion-extension-registry", path = "extension_registry" }
extensions = { package = "firmion-extensions", path = "extensions" }
firmion_extension = { package = "firmion-extension", path = "firmion_extension" }
ir = { package = "firmion-ir", path = "ir" }
irdb = { package = "firmion-irdb", path = "irdb" }
ireval = { package = "firmion-ireval", path = "ireval" }
layout_phase = { package = "firmion-layout-phase", path = "layout_phase" }
layoutdb = { package = "firmion-layoutdb", path = "layoutdb" }
linearizer = { package = "firmion-linearizer", path = "linearizer" }
locationdb = { package = "firmion-locationdb", path = "locationdb" }
map_phase = { package = "firmion-map-phase", path = "map_phase" }
mapdb = { package = "firmion-mapdb", path = "mapdb" }
objfile = { package = "firmion-objfile", path = "objfile" }
output_buffer = { package = "firmion-output-buffer", path = "output_buffer" }
process = { package = "firmion-process", path = "process" }
regiondb = { package = "firmion-regiondb", path = "regiondb" }
std_crc32c = { package = "firmion-std-crc32c", path = "std/crc32c" }
std_esp_checksum = { package = "firmion-std-esp-checksum", path = "std/esp_checksum" }
std_md5 = { package = "firmion-std-md5", path = "std/md5" }
std_sha256 = { package = "firmion-std-sha256", path = "std/sha256" }
std_xor = { package = "firmion-std-xor", path = "std/xor" }
symtable = { package = "firmion-symtable", path = "symtable" }
validation_phase = { package = "firmion-validation-phase", path = "validation_phase" }

[features]
default = ["std-crc32c", "std-sha256", "std-md5", "std-xor", "std-esp-checksum"]
std-crc32c = ["process/std-crc32c"]
std-sha256 = ["process/std-sha256"]
std-md5 = ["process/std-md5"]
std-xor = ["process/std-xor"]
std-esp-checksum = ["process/std-esp-checksum"]

[dependencies]
anyhow = "1.0.34"
clap = { version = "4.5", features = ["derive"] }
indextree = "4.3.1"
process = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
serde_json = "1"
serial_test = "3.4.0"

[lints]
workspace = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'thin'
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
