
[package]
name = "firmion"
description = "Ergonomic firmware and binary file creation tool."
build = "build.rs"
license-file = "LICENSE.txt"
readme = "README.md"
homepage = "https://github.com/steveking-gh/firmion"
repository = "https://github.com/steveking-gh/firmion"
keywords = ["firmware", "cli", "build", "flash"]
categories = ["development-tools::compilers"]
authors = ["Steve King <sk@metrokings.com>"]
edition = "2024"
version.workspace = true
publish.workspace = true
exclude = [
    "tests/*",
    "docs/ai/*",
    ".github/*",
    "ast/fuzz/*",
    "extension_registry/test_mock.rs",
    "images/*",
    "layoutdb/fuzz/*",
]

[workspace]
members = [
    "ast",
    "astdb",
    "const_eval",
    "depth_guard",
    "diags",
    "exec_phase",
    "extension_registry",
    "extensions",
    "firmion_extension",
    "ir",
    "irdb",
    "ireval",
    "layout_phase",
    "layoutdb",
    "linearizer",
    "locationdb",
    "map_phase",
    "mapdb",
    "objfile",
    "output_buffer",
    "process",
    "regiondb",
    "extensions/std/crc32c",
    "extensions/std/esp_checksum",
    "extensions/std/md5",
    "extensions/std/sha256",
    "extensions/std/xor",
    "symtable",
    "validation_phase",
]

[workspace.package]
version = "0.7.0"
authors = ["Steve King <sk@metrokings.com>"]
edition = "2024"
publish = true

[workspace.lints.rust]
unsafe_code = "forbid"

# Strip the firmion- prefix from package names.
# The prefix only exists to prevent name collisions on crates.io.
[workspace.dependencies]
ast = { package = "firmion-ast", path = "ast", version = "0.7.0" }
astdb = { package = "firmion-astdb", path = "astdb", version = "0.7.0" }
const_eval = { package = "firmion-const-eval", path = "const_eval", version = "0.7.0" }
depth_guard = { package = "firmion-depth-guard", path = "depth_guard", version = "0.7.0" }
diags = { package = "firmion-diags", path = "diags", version = "0.7.0" }
exec_phase = { package = "firmion-exec-phase", path = "exec_phase", version = "0.7.0" }
extension_registry = { package = "firmion-extension-registry", path = "extension_registry", version = "0.7.0" }
extensions = { package = "firmion-extensions", path = "extensions", version = "0.7.0" }
firmion_extension = { package = "firmion-extension", path = "firmion_extension", version = "0.7.0" }
ir = { package = "firmion-ir", path = "ir", version = "0.7.0" }
irdb = { package = "firmion-irdb", path = "irdb", version = "0.7.0" }
ireval = { package = "firmion-ireval", path = "ireval", version = "0.7.0" }
layout_phase = { package = "firmion-layout-phase", path = "layout_phase", version = "0.7.0" }
layoutdb = { package = "firmion-layoutdb", path = "layoutdb", version = "0.7.0" }
linearizer = { package = "firmion-linearizer", path = "linearizer", version = "0.7.0" }
locationdb = { package = "firmion-locationdb", path = "locationdb", version = "0.7.0" }
map_phase = { package = "firmion-map-phase", path = "map_phase", version = "0.7.0" }
mapdb = { package = "firmion-mapdb", path = "mapdb", version = "0.7.0" }
objfile = { package = "firmion-objfile", path = "objfile", version = "0.7.0" }
output_buffer = { package = "firmion-output-buffer", path = "output_buffer", version = "0.7.0" }
process = { package = "firmion-process", path = "process", version = "0.7.0" }
regiondb = { package = "firmion-regiondb", path = "regiondb", version = "0.7.0" }
std_crc32c = { package = "firmion-std-crc32c", path = "extensions/std/crc32c", version = "0.7.0" }
std_esp_checksum = { package = "firmion-std-esp-checksum", path = "extensions/std/esp_checksum", version = "0.7.0" }
std_md5 = { package = "firmion-std-md5", path = "extensions/std/md5", version = "0.7.0" }
std_sha256 = { package = "firmion-std-sha256", path = "extensions/std/sha256", version = "0.7.0" }
std_xor = { package = "firmion-std-xor", path = "extensions/std/xor", version = "0.7.0" }
symtable = { package = "firmion-symtable", path = "symtable", version = "0.7.0" }
validation_phase = { package = "firmion-validation-phase", path = "validation_phase", version = "0.7.0" }

[features]
default = ["std-crc32c", "std-sha256", "std-md5", "std-xor", "std-esp-checksum"]
std-crc32c = ["process/std-crc32c"]
std-sha256 = ["process/std-sha256"]
std-md5 = ["process/std-md5"]
std-xor = ["process/std-xor"]
std-esp-checksum = ["process/std-esp-checksum"]

[dependencies]
anyhow = "1.0.34"
clap = { version = "4.5", features = ["derive"] }
indextree = "4.3.1"
process = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
serde_json = "1"
serial_test = "3.4.0"

[lints]
workspace = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'thin'
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
