[package]
name = "ast"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "ast.rs"

[dependencies]
logos = "0.11.4"
indextree = "4.3.1"
codespan-reporting = "0.9.5"
log = "0.4.11"
anyhow = "1.0.34"

diags = { path = "../diags" }