[package]
name = "firmion-ast"
description = "Abstract syntax tree used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "ast.rs"

[dependencies]
anyhow = "1.0.34"

depth_guard = { workspace = true }
diags = { workspace = true }
indextree = "4.3.1"
tracing = "0.1.44"

[lints]
workspace = true
