[package]
name = "firmion-astdb"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "astdb.rs"

[dependencies]
anyhow = "1.0.34"
indextree = "4.3.1"

depth_guard = { workspace = true }
diags = { workspace = true }
ast = { workspace = true }
tracing    = "0.1.44"
