[package]
name = "firmion-astdb"
description = "Abstract syntax tree database used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "astdb.rs"

[dependencies]
anyhow = "1.0.34"
ast = { workspace = true }

depth_guard = { workspace = true }
diags = { workspace = true }
indextree = "4.3.1"
tracing = "0.1.44"

[lints]
workspace = true
