[package]
name = "firmion-const-eval"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "const_eval.rs"

[dependencies]
anyhow = "1.0.34"
indextree = "4.6.1"
parse_int = "0.9.0"

# local dependencies
ast = { workspace = true }
astdb = { workspace = true }
depth_guard = { workspace = true }
diags = { workspace = true }
ir = { workspace = true }
linearizer = { workspace = true }
symtable = { workspace = true }
tracing = "0.1.44"
