[package]
name = "firmion-const-eval"
description = "Constant evaluation used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "const_eval.rs"

[dependencies]
anyhow = "1.0.34"

# local dependencies
ast = { workspace = true }
astdb = { workspace = true }
depth_guard = { workspace = true }
diags = { workspace = true }
indextree = "4.6.1"
ir = { workspace = true }
linearizer = { workspace = true }
parse_int = "0.9.0"
symtable = { workspace = true }
tracing = "0.1.44"

[lints]
workspace = true
