[package]
name = "constdb"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "constdb.rs"

[dependencies]
anyhow = "1.0.34"
indextree = "4.6.1"

# local dependencies
ast = { path = "../ast" }
diags = { path = "../diags" }
ir = { path = "../ir" }
linearizer = { path = "../linearizer" }
tracing = "0.1.44"
