[package]
name = "firmion-depth-guard"
description = "Recursion depth guard used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "depth_guard.rs"

[lints]
workspace = true
