[package]
name = "firmion-diags"
description = "Error message reporting used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "diags.rs"

[dependencies]
ariadne = "0.6.0"

[lints]
workspace = true

