[package]
name = "engine"
version = "0.1.0"
authors = ["Steve King <sk@metrokings.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "engine.rs"

[dependencies]
codespan-reporting = "0.9.5"
log = "0.4.11"
anyhow = "1.0.34"

# local dependencies
diags = { path = "../diags" }
ast = { path = "../ast" }
ir = { path = "../ir" }
irdb = { path = "../irdb" }