[package]
name = "engine"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "engine.rs"

[dependencies]
codespan-reporting = "0.9.5"
anyhow = "1.0.34"

# local dependencies
diags = { path = "../diags" }
ast = { path = "../ast" }
ir = { path = "../ir" }
irdb = { path = "../irdb" }
ext = { path = "../ext" }
tracing = "0.1.44"
memmap2 = "0.9.10"
