[package]
name = "firmion-exec-phase"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "exec_phase.rs"

[dependencies]
diags = { workspace = true }
ir = { workspace = true }
irdb = { workspace = true }
locationdb = { workspace = true }
mapdb = { workspace = true }
extension_registry =  { workspace = true }
output_buffer = { workspace = true }
ireval = { workspace = true }
anyhow = "1.0.34"
tracing = "0.1.44"
