[package]
name = "firmion-exec-phase"
description = "Post-layout execution phase used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "exec_phase.rs"

[dependencies]
anyhow = "1.0.34"
diags = { workspace = true }
extension_registry = { workspace = true }
ir = { workspace = true }
irdb = { workspace = true }
ireval = { workspace = true }
locationdb = { workspace = true }
mapdb = { workspace = true }
output_buffer = { workspace = true }
tracing = "0.1.44"

[lints]
workspace = true
