[package]
name = "extension_registry"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "extension_registry.rs"

[dependencies]
firmion_extension = { path = "../firmion_extension" }
tracing = "0.1.44"

[dev-dependencies]
tracing-subscriber = "0.3.22"
