[package]
name = "firmion-extension-registry"
description = "Extension registry used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "extension_registry.rs"

[dependencies]
firmion_extension = { workspace = true }
tracing = "0.1.44"

[dev-dependencies]
tracing-subscriber = "0.3.22"

[lints]
workspace = true
