[package]
name = "firmion-extensions"
description = "Standard extension registration used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[features]
std-crc32c = ["dep:std_crc32c"]
std-sha256 = ["dep:std_sha256"]
std-md5 = ["dep:std_md5"]
std-xor = ["dep:std_xor"]
std-esp-checksum = ["dep:std_esp_checksum"]

[dependencies]
extension_registry = { workspace = true }
std_crc32c = { workspace = true, optional = true }
std_esp_checksum = { workspace = true, optional = true }
std_md5 = { workspace = true, optional = true }
std_sha256 = { workspace = true, optional = true }
std_xor = { workspace = true, optional = true }

[lints]
workspace = true
