[package]
name = "firmion-extension"
description = "Extension API used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true
