[package]
name = "ir"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "ir.rs"

[dependencies]
diags = { path = "../diags" }
parse_int = "0.9.0"
tracing = "0.1.44"
