[package]
name = "firmion-ir"
description = "Intermediate representation used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "ir.rs"

[dependencies]
diags = { workspace = true }
parse_int = "0.9.0"
tracing = "0.1.44"

[lints]
workspace = true
