[package]
name = "firmion-irdb"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "irdb.rs"

[dependencies]
anyhow = "1.0.34"
# local dependencies
diags = { workspace = true }
extension_registry = { workspace = true }
indextree = "4.3.1"
ir = { workspace = true }
layoutdb = { workspace = true }
linearizer = { workspace = true }
objfile = { workspace = true }
parse_int = "0.9.0"
symtable = { workspace = true }
tracing = "0.1.44"

[lints]
workspace = true
