[package]
name = "firmion-ireval"
description = "Intermediate representation utils used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "ireval.rs"

[dependencies]
diags = { workspace = true }
ir = { workspace = true }

[lints]
workspace = true
