[package]
name = "firmion-layout-phase"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "layout_phase.rs"

[dependencies]
anyhow = "1.0.34"

# local dependencies
diags = { workspace = true }
ast = { workspace = true }
ir = { workspace = true }
irdb = { workspace = true }
extension_registry =  { workspace = true }
tracing = "0.1.44"
memmap2 = "0.9.10"
locationdb = { workspace = true }
regiondb = { workspace = true }
ireval = { workspace = true }
