[package]
name = "firmion-layout-phase"
description = "Layout phase used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "layout_phase.rs"

[dependencies]
anyhow = "1.0.34"
ast = { workspace = true }

# local dependencies
diags = { workspace = true }
extension_registry = { workspace = true }
ir = { workspace = true }
irdb = { workspace = true }
ireval = { workspace = true }
locationdb = { workspace = true }
memmap2 = "0.9.10"
regiondb = { workspace = true }
tracing = "0.1.44"

[lints]
workspace = true
