[package]
name = "layoutdb"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "layoutdb.rs"

[dependencies]
indextree = "4.3.1"
anyhow = "1.0.34"

depth_guard = { path = "../depth_guard" }
diags = { path = "../diags" }
ast   = { path = "../ast" }
astdb = { path = "../astdb" }
ir = { path = "../ir" }
linearizer = { path = "../linearizer" }
tracing = "0.1.44"
