[package]
name = "firmion-layoutdb"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "layoutdb.rs"

[dependencies]
indextree = "4.3.1"
anyhow = "1.0.34"

depth_guard = { workspace = true }
diags = { workspace = true }
ast = { workspace = true }
astdb = { workspace = true }
ir = { workspace = true }
linearizer = { workspace = true }
symtable = { workspace = true }
tracing = "0.1.44"
