[package]
name = "firmion-layoutdb"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "layoutdb.rs"

[dependencies]
anyhow = "1.0.34"
ast = { workspace = true }
astdb = { workspace = true }

depth_guard = { workspace = true }
diags = { workspace = true }
indextree = "4.3.1"
ir = { workspace = true }
linearizer = { workspace = true }
symtable = { workspace = true }
tracing = "0.1.44"

[lints]
workspace = true
