[package]
name = "linearizer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "linearizer.rs"

[dependencies]
indextree = "4.3.1"

depth_guard = { path = "../depth_guard" }
diags = { path = "../diags" }
ast = { path = "../ast" }
ir = { path = "../ir" }
symtable = { path = "../symtable" }
tracing = "0.1.44"
