[package]
name = "firmion-linearizer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "linearizer.rs"

[dependencies]
indextree = "4.3.1"

depth_guard = { workspace = true }
diags = { workspace = true }
ast = { workspace = true }
ir = { workspace = true }
symtable = { workspace = true }
tracing = "0.1.44"
