[package]
name = "firmion-linearizer"
description = "AST to IR linearizer used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "linearizer.rs"

[dependencies]
ast = { workspace = true }

depth_guard = { workspace = true }
diags = { workspace = true }
indextree = "4.3.1"
ir = { workspace = true }
symtable = { workspace = true }
tracing = "0.1.44"

[lints]
workspace = true
