[package]
name = "firmion-locationdb"
description = "Location database used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "locationdb.rs"

[dependencies]
diags = { workspace = true }
ir = { workspace = true }

[lints]
workspace = true
