[package]
name = "map_phase"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "map_phase.rs"

[dependencies]
locationdb = { path = "../locationdb" }
irdb = { path = "../irdb" }
ir = { path = "../ir" }
diags = { path = "../diags" }
serde_json = "1"
tracing = "0.1.44"
mapdb = { path = "../mapdb" }
paramvaldb = { path = "../paramvaldb" }
