[package]
name = "firmion-map-phase"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "map_phase.rs"

[dependencies]
locationdb = { workspace = true }
irdb = { workspace = true }
ir = { workspace = true }
diags = { workspace = true }
serde_json = "1"
tracing = "0.1.44"
mapdb = { workspace = true }
ireval = { workspace = true }
