[package]
name = "firmion-map-phase"
description = "Map phase used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "map_phase.rs"

[dependencies]
diags = { workspace = true }
ir = { workspace = true }
irdb = { workspace = true }
ireval = { workspace = true }
locationdb = { workspace = true }
mapdb = { workspace = true }
serde_json = "1"
tracing = "0.1.44"

[lints]
workspace = true
