[package]
name = "firmion-mapdb"
description = "Map results database used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "mapdb.rs"

[dependencies]
diags = { workspace = true }
ir = { workspace = true }

[lints]
workspace = true
