[package]
name = "firmion-objfile"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "objfile.rs"

[dependencies]
diags = { workspace = true }
ir = { workspace = true }
object = { version = "0.36", default-features = false, features = ["read", "elf"] }

[lints]
workspace = true
