[package]
name = "firmion-objfile"
description = "Object file functions used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "objfile.rs"

[dependencies]
diags = { workspace = true }
ir = { workspace = true }
object = { version = "0.36", default-features = false, features = ["read", "elf"] }

[lints]
workspace = true
