[package]
name = "firmion-output-buffer"
description = "Output buffer abstraction used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "output_buffer.rs"

[lints]
workspace = true
