[package]
name = "process"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
std-crc32c = ["extensions/std-crc32c"]
std-sha256  = ["extensions/std-sha256"]
std-md5     = ["extensions/std-md5"]

[lib]
path = "process.rs"

[dependencies]
anyhow = "1.0.34"
parse_int = "0.9.0"

# local dependencies
ast = { path = "../ast" }
diags = { path = "../diags" }
ir = { path = "../ir" }
layoutdb = { path = "../layoutdb" }
const_eval = { path = "../const_eval" }
prune = { path = "../prune" }
irdb = { path = "../irdb" }
layout_phase = { path = "../layout_phase" }
map_phase = { path = "../map_phase" }
exec_phase = { path = "../exec_phase" }
extension_registry = { path = "../extension_registry" }
extensions = { path = "../extensions" }
tracing = "0.1.44"
locationdb = { path = "../locationdb" }
mapdb = { path = "../mapdb" }
argvaldb = { path = "../argvaldb" }
