[package]
name = "firmion-process"
description = "Main pipeline driver used by the firmion compiler."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "process.rs"

[features]
std-crc32c = ["extensions/std-crc32c"]
std-sha256  = ["extensions/std-sha256"]
std-md5     = ["extensions/std-md5"]
std-xor          = ["extensions/std-xor"]
std-esp-checksum = ["extensions/std-esp-checksum"]

[dependencies]
anyhow = "1.0.34"

# local dependencies
ast = { workspace = true }
astdb = { workspace = true }
const_eval = { workspace = true }
diags = { workspace = true }
exec_phase = { workspace = true }
extension_registry = { workspace = true }
extensions = { workspace = true }
ir = { workspace = true }
irdb = { workspace = true }
ireval = { workspace = true }
layout_phase = { workspace = true }
layoutdb = { workspace = true }
locationdb = { workspace = true }
map_phase = { workspace = true }
mapdb = { workspace = true }
parse_int = "0.9.0"
regiondb = { workspace = true }
tracing = "0.1.44"
validation_phase = { workspace = true }

[lints]
workspace = true
