[package]
name = "prune"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "prune.rs"

[dependencies]
anyhow = "1.0.34"
indextree = "4.3.1"

# local dependencies
ast = { path = "../ast" }
const_eval = { path = "../const_eval" }
diags = { path = "../diags" }
symtable = { path = "../symtable" }
tracing = "0.1.44"
